@@ -17,6 +17,7 @@ Version 0.3.0 (?)
     customize your theme.
   * The "New comment" form now requires an email address.
   * Twitter plugin now excludes replies by default.
+  * Twitter plugin now turns #hashtags into links.
   * Comment HTML sanitization was separated out into a new gem, Sanitize.
   * Comment titles are now limited to 100 characters instead of 255.
   * Long unbroken runs of text without whitespace in comments are now broken up
